--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@
 /*-------------------------------*/
 header{
     width: 100vw;
+    max-width: 100%;
     height: 53px;
     background-color: var(--primary);
     text-align: center;
@@ -33,17 +34,58 @@ header h1{
 /*            Main               */
 /*-------------------------------*/
 main{
-    background-color: red;
+    min-height: calc(100vh - 53px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url('../images/bgimg.png');
+}
+.getInfo{
+    width: 407px;
+    background-color: var(--third);
+    margin-top: 59px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 22px;
+    border-radius: 4px;
 }
 
+.getInfo h3{
+    width: 100%;
+    text-align: center;
+    margin-bottom: 35px;
+    padding-bottom: 8px;
+    border-bottom: 1px solid gray;
+    font-size: 20px;
+    font-weight: 300;
+}
 
+.getInfo textarea,
+.getInfo input:not(input[type=checkbox]){
+    width: 302px;
+    padding: 10px;
+    border: 1px solid #9C9C9C;
+    outline: 0;
+    margin-bottom: 20px;
+    border-radius: 3px;
+    font-size: 14px;
+}
 
+.getInfo textarea{
+    height: 100px;
+    resize: none;
+}
 
-/*-------------------------------*/
-/*           Footer              */
-/*-------------------------------*/
-footer{
-    background-color: rgb(4, 0, 255);
+.checkbox{
+    margin-bottom: 20px;
+}
+
+.hiddenSection{
+    /*display: flex;*/
+    flex-direction: column;
+    justify-content: center;
+    display: none;
 }
 
 
