--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,8 @@ main{
     flex-direction: column;
     align-items: center;
     background-image: url('../images/bgimg.png');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     padding-bottom: 100px;
 }
 
