--- a/assets/css/report.css
+++ b/assets/css/report.css
@@ -35,6 +35,9 @@ header h1{
 /*----------------------------------------*/
 /*                 Body                   */
 /*----------------------------------------*/
+main{
+    padding-bottom: 100px;
+}
 
 /*Table*/
 .tableBox{
@@ -126,4 +129,24 @@ td{
     width: 90%;
     margin-top: 23px;
     font-size: 14px;
+}
+
+
+
+.buttonBox{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.saveReport{
+    border: 0;
+    outline: none;
+    background-color: rgb(0, 162, 255);
+    padding: 10px 20px;
+    color: white;
+    font-size: 16px;
+    border-radius: 4px;
+    cursor: pointer;
 }
