Created the functionality to load a previous table.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,8 +169,8 @@ td{
     background-color: rgb(134, 14, 14);
 }
 
-.calculatePrice{
-    background-color: rgb(80, 108, 126);
+.loadLastTable{
+    background-color: rgb(25, 141, 161);
 }
 
 .generateButton{
