--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 /*-------------------------------*/
 :root {
     --primary: #3CB371;
-    --secondary: #636363;
+    --secondary: #198D2B;
     --third: #D3D3D3;
 }
 
@@ -17,7 +17,8 @@ header{
     width: 100vw;
     max-width: 100%;
     height: 53px;
-    background-color: var(--primary);
+    background: linear-gradient(to bottom, #3CB371, #30855D);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3), 0px 0px 10px rgba(255, 255, 255, 0.5) inset;
     text-align: center;
     line-height: 53px;
 }
@@ -47,7 +48,9 @@ main{
 /*Form*/
 .getInfo{
     width: 407px;
-    background-color: var(--third);
+    
+    background: linear-gradient(to bottom, #EAEAEA, #D3D3D3);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3), 0px 0px 10px rgba(255, 255, 255, 0.5) inset;
     margin-top: 59px;
     display: flex;
     flex-direction: column;
@@ -55,7 +58,6 @@ main{
     padding: 22px;
     border-radius: 4px;
 }
-
 .getInfo h3{
     width: 100%;
     text-align: center;
@@ -65,6 +67,12 @@ main{
     font-size: 20px;
     font-weight: 300;
     letter-spacing: 2px;
+    color: #333333;
+}
+
+.getInfo label{
+    color: rgb(51, 51, 51);
+    margin-bottom: 5px;
 }
 
 .getInfo textarea,
@@ -85,10 +93,15 @@ main{
 
 .checkbox{
     margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .checkbox span{
     font-size: 15px;
+    color: #333333;
+    margin-left: 5px;
 }
 
 .hiddenSection{
@@ -113,12 +126,15 @@ table {
 
 .tableTitle{
     width: 823px;
-    background-color: var(--secondary);
-    color: white;
+    background: linear-gradient(to bottom, #EAEAEA, #D3D3D3);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3), 0px 0px 10px rgba(255, 255, 255, 0.5) inset;
+    color: rgb(15, 15, 15);
     text-align: center;
     padding: 10px;
-    font-size: 20px;
-    letter-spacing: 2px;
+    font-size: 18px;
+    letter-spacing: 1.5px;
+    font-weight: 500;
+    text-transform: uppercase;
 }
 
 tr{
@@ -131,9 +147,11 @@ td, th{
 
 th {
     padding: 10px;
-    background-color: var(--third);
+    background-color: rgb(230, 230, 230);
     color: #181818;
     font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 1.5px;
 }
 
 td{
@@ -156,25 +174,32 @@ td{
     cursor: pointer;
     outline: none;
     margin-bottom: 15px;
-    margin-left: 20px;
     color: white;
 }
 
 .newLineButton{
-    cursor: pointer;
-    background-color: var(--primary);
+    color: #1d1d1d;
+    background: linear-gradient(to bottom, #BFEFFF, #7FC7FF);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4), 0px 0px 5px rgba(255, 255, 255, 0.6) inset;
 }
 
 .deleteLineButton{
-    background-color: rgb(134, 14, 14);
+    color: #1d1d1d;
+    margin-left: 20px;
+    background: linear-gradient(to bottom, #FF9999, #FF6666);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4), 0px 0px 5px rgba(255, 255, 255, 0.6) inset;
 }
 
 .loadLastTable{
-    background-color: rgb(25, 141, 161);
+    color: #1d1d1d;
+    margin-left: 20px;
+    background: linear-gradient(to bottom, #EEEEEE, #CCCCCC);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4), 0px 0px 5px rgba(255, 255, 255, 0.6) inset;
 }
 
 .generateButton{
-    background-color: #00B2FF;
+    background: linear-gradient(to bottom, #3CB371, #30855D);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3), 0px 0px 10px rgba(255, 255, 255, 0.5) inset;
     color: white;
     padding: 10px 17px;
     border-radius: 4px;
@@ -186,7 +211,6 @@ td{
 }
 
 .generateButton:hover{
-    background-color: #00a2e7;
     color: rgb(240, 240, 240);
 }
 
